# cmake-starters

./: .gitignore  CMakeLists.txt  README.md
01_Hello/: CMakeLists.txt
01_Hello/Source/: Hello.cpp
02_Testing/: CMakeLists.txt
03_JuceHello/: CMakeLists.txt  JuceHello.jucer
03_JuceHello/Source/: Main.cpp
04_JucePlugin/: 04_JucePlugin.jucer  CMakeLists.txt
04_JucePlugin/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
04_JucePlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
05_JuceUINoJucer/: CMakeLists.txt
